<resources>
    <string name="app_name" translatable="false">mapease</string>
    <string name="title_activity_sign_up" translatable="false">MapEase</string>

    <string name="search_here">Search here</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="search_review">Find a place to review</string>

    <string name="select_language">Languages</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>

    <!--    //Login and Sign up-->
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <string name="sign_in_emailUsername">Email or Username</string>
    <string name="sign_inup_password">Password</string>
    <string name="dont">Do not have an account?</string>
    <string name="forgot_password">Forgot password</string>

    <string name="usernameSignUp">Username</string>
    <string name="EmailLabel">Email</string>

    <string name="sign_in_btn">SIGN IN</string>
    <string name="sign_up_btn">SIGN UP</string>

    <string name="alreadyHaveAccount">Already have an account</string>

    <string name="rest_password_title">Reset password</string>
    <string name="rest_password_btn">Reset</string>"
    <string name="cancel_btn">Cancel</string>

    <!--    //Main screen-->
    <string name="search_btn">Search</string>
    <string name="restaurant_btn">Restaurant</string>
    <string name="hotel_btn">Hotel</string>
    <string name="cafe_btn">Cafe</string>
    <string name="mall_btn">Mall</string>

    <!--    //Review search-->
    <!--    <string name="search_review">Find a place to review</string>-->
    <!--    <string name="search_here">Search here</string>-->


    <!--    SplashScreen-->
    <string name="splash_screen_title">Welcome to MapEase</string>


    <!--    Write_review-->
    <string name="your_place">Your place</string>
    <string name="your_name">Your name</string>
    <string name="posting_publicly">Posting publicly</string>

    <string name="tell_other_people">Tell other people about your experience</string>
    <string name="add_photos">Add photos and videos</string>
    <string name="post_review">Post</string>


    <!--    Your profile -->
    <string name="edit_profile">Edit profile</string>
    <string name="write_review">Write review</string>
    <string name="your_contributions">Contributions</string>
    <string name="your_following">Following</string>
    <string name="tell_other_people_profile">Tell other about yourself and the places you love</string>
    <string name="review_profile_list">REVIEWS</string>


    <!--    //Profile Menu-->
    <string name="yourProfile">Your profile</string>
    <string name="yourTimeLine">Your timeline</string>
    <string name="locationSharing">Location sharing</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Admin -->
    <string name="admin_open_menu">Open menu</string>
    <string name="admin_close_menu">Close menu</string>


    <string name="place_icon">Place Icon</string>
    <string name="place_name">Place Name</string>
    <string name="restaurant">Restaurants</string>
    <string name="coffee">Coffee Shops</string>
    <string name="hotels">Hotels</string>
    <string name="shopping">Shopping</string>
    <string name="gas">Gas Stations</string>
    <string name="groceries">Groceries</string>
    <string name="hospital_clinics">Hospitals Clinics</string>
    <string name="second">sec</string>
    <string name="minute">min</string>
    <string name="DIRECTION">DIRECTION</string>
    <string name="SAVE">SAVE</string>
    <string name="YourLocation">Your Location</string>
    <string name="Drive">Drive</string>
    <string name="Ride">Ride</string>
    <string name="Walk">Walk</string>
    <string name="routeStatus">Fastest route, lighter traffic than usual</string>


    <string name="report_button_description">Report Danger</string>
    <string name="report_dialog_title">Select Danger Type</string>
    <string name="report_type_accident">⚠️ Traffic Accident</string>
    <string name="report_type_construction">🚧 Road Construction / Maintenance</string>
    <string name="report_type_congestion">🚗 Heavy Traffic</string>
    <string name="report_type_flood">🌧️ Flood / Bad Weather</string>
    <string name="report_type_pothole">🕳️ Pothole / Road Damage</string>
    <string name="report_type_crime">🏚️ Unsafe Area</string>
    <string name="report_success_toast">Flagged as: %1$s</string>
    <string name="danger_marker_title">Danger Zone</string>
    <string name="review_image_description">Review image</string>



    <string-array name="location_types">
        <item>All</item>
        <item>Restaurant</item>
        <item>Park</item>
        <item>Museum</item>
        <item>Shopping Mall</item>
        <item>Cafe</item>
    </string-array>
    <string name="SelectedLocation">Selected Location</string>
    <string name="enter_description_title">Describe: %1$s</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="description_hint">Enter description</string>
    <string name="description_required">Please enter a description.</string>
    <string name="MapItem">Map</string>
    <string name="REPORTHAZARD">Report Danger</string>
    <string name="DELETEHAZARD">delete</string>


    <string-array name="report_title">
        <item>Off topic</item>
        <item>Spam</item>
        <item>Conflict of interest</item>
        <item>Profanity</item>
        <item>Bullying or harassment</item>
        <item>Discrimination or hate speech</item>
        <item>Personal information</item>
        <item>Not helpful</item>
    </string-array>

    <string-array name="report_description">
        <item>Review does not pertain to an experience at or with this business</item>
        <item>Review is from a bot, a fake account, or contains ads and promotions</item>
        <item>Review is from someone affiliated with the business or a competitor of business</item>
        <item>Review contains swear words, has sexually explicit language, or details graphic violence</item>
        <item>Review personally attacks a specific individual</item>
        <item>Review has harmful language about an individual or group based on identity</item>
        <item>Review contains personal information, such as an address or phone number</item>
        <item>Review does not help people decide whether to go to this place</item>
    </string-array>
</resources>