<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".signUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:elevation="30dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/mocha"/>
            
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="60dp"
                android:padding="8dp"
                android:hint="@string/EmailLabel"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="15dp"
                android:textColor="@color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_username"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/usernameSignUp"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="15dp"
                android:textColor="@color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/sign_inup_password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/lock_icon"
                android:drawablePadding="20dp"
                android:textColor="@color/black" />
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign_up_btn"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/mocha"
                app:cornerRadius = "20dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signInRedirect"
                    android:text="@string/alreadyHaveAccount"
                    android:layout_gravity="left"
                    android:padding="10dp"/>
                <!-- <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgotPassword"
                    android:text="Forgot password"
                    android:layout_gravity="right"
                    android:padding="10dp"/> -->
            </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>