<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    tools:context=".WriteReview">

    <ImageButton
        android:id="@+id/backToHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Back to Home"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/place_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Your place"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your name"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/place_name" />

    <TextView
        android:id="@+id/posting_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posting_publicly"
        android:textSize="15sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <LinearLayout
        android:id="@+id/star_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/posting_info">
        <ImageButton
            android:id="@+id/star1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_star_empty"
            android:background="@color/white"
            android:layout_marginEnd="34dp" />
        <ImageButton
            android:id="@+id/star2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_star_empty"
            android:background="@color/white"
            android:layout_marginEnd="34dp" />
        <ImageButton
            android:id="@+id/star3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_star_empty"
            android:background="@color/white"
            android:layout_marginEnd="34dp" />
        <ImageButton
            android:id="@+id/star4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_star_empty"
            android:background="@color/white"
            android:layout_marginEnd="34dp" />
        <ImageButton
            android:id="@+id/star5"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@color/white"
            android:src="@drawable/ic_star_empty" />
    </LinearLayout>

    <EditText
        android:id="@+id/review_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tell_other_people"
        android:layout_marginTop="24dp"
        android:textColor="#757575"
        android:background="#F5F5F5"
        android:padding="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/star_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="top|start"
        android:textSize="20sp" />

    <Button
        android:id="@+id/add_photos_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_photos"
        android:textColor="#00bcd4"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/review_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#BAF2FA" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/add_photos_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/image_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp" />
    </HorizontalScrollView>

    <Button
        android:id="@+id/post_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post_review"
        android:textColor="#FFFFFF"
        android:backgroundTint="#00bcd4"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="15sp" />

</androidx.constraintlayout.widget.ConstraintLayout>